# flutter_overleaf_studio

./: .env.example  .gitignore  .promts.txt  DEPLOY_GUIDE.md  Dockerfile  Dockerfile.dev  README.md  agents.md  app_log.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  tests.http
.agents/latex-skill/: SKILL.md
.github/workflows/: cd.yml  ci.yml
app/: auth.py  cache.py  compiler.py  config.py  errors.py  limiter.py  main.py  models.py
app/routers/: compile.py
flutter_client/: README.md  analysis_options.yaml  pubspec.yaml
flutter_client/lib/: app.dart  main.dart
flutter_client/test/: widget_test.dart
flutter_client/web/: index.html  manifest.json
flutter_overleaf/: README.md  pubspec.yaml
flutter_overleaf/lib/: app.dart  main.dart
flutter_overleaf/test/: compiler_bloc_test.dart  editor_bloc_test.dart  project_bloc_test.dart
flutter_overleaf/web/: manifest.json
overleaf_server/: .env.example  DEPLOY_GUIDE_HETZNER.md  DEPLOY_GUIDE_ORACLE.md  Dockerfile  README.md  docker-compose.prod.hetzner.yml  docker-compose.prod.yml  requirements-dev.txt  texlive.profile
overleaf_server/app/: __init__.py  cache.py  compiler.py  config.py  errors.py  logging.py  main.py  middleware.py  models.py
overleaf_server/scripts/: deploy.sh  server-setup-hetzner.sh  server-setup.sh
overleaf_server/test_samples/: 01_hello_world.tex  (+3 more)
scripts/: deploy.sh  server-setup.sh  test_samples.sh
test_samples/: 05_images_tikz.tex
tests/: conftest.py  test_auth.py  test_compile.py  test_hardening.py  test_health.py  test_middleware.py
(+163 files in other folders)
